[package]
name = "down2earth"
version = "0.1.0"
edition = "2021"

[dependencies]
battery = "0.7.8"
clap = { version = "4.5.23", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
image = "0.25.5"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
wallpaper = "3.2.0"
